# Puppy

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/androidTest/java/com/example/puppy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: imageprocessing.cpp
app/src/main/java/com/example/puppy/: AddCatActivity.java  AnalysisActivity.java  Cat.java  CatSetActivity.java  LoginActivity.java  MainActivity.java  MyApplication.java  PicassoTransformations.java  ResultActivity.java  SignActivity.java  SplashActivity.java
app/src/main/java/com/example/puppy/ui/analysis/: AnalysisFragment.java
app/src/main/java/com/example/puppy/ui/camera/: AutoFitTextureView.java  CallbackInterface.java  Camera2BasicFragment.java  CameraCatChoice.java  CameraCatChoiceAdapter.java  CameraFragment.java  CameraPreview.java
app/src/main/java/com/example/puppy/ui/home/: CatAdapter.java  HomeFragment.java  ListViewItem.java  (+1 more)
app/src/main/res/drawable/: rectangle.xml
app/src/main/res/drawable-v24/: buttons.xml
app/src/main/res/layout/: activity_add_cat.xml  activity_cat_set.xml  activity_login.xml  activity_sign.xml  cat_choice_fragment.xml  cat_choice_item.xml  fragment_cam.xml  fragment_camera2_basic.xml  fragment_home.xml  fragment_list.xml  list_item.xml  listview_item.xml  results.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: calendar.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
(+13 files in other folders)
